info_u_frontend/src/styles.css
/* You can add global styles to this file, and also import other style files */

.eArriba55 {
    margin-top: 55px;
}

.eArriba7 {
    margin-top: 7px;
}

.eArriba200 {
    margin-top: 200px;
}

.eArriba25 {
    padding-top: 25px;
}

.eArribaPrograms {
    padding-top: 50px;
}

.eArriba80 {
    padding-top: 100px;
}

.eArriba100 {
    padding-top: 100px;
}

.eArriba200 {
    padding-top: 200px;
}

.eAbajo25 {
    padding-bottom: 25px;
}

.eAbajoNavBar {
    padding-bottom: 56px;
}

.eAbajo200 {
    padding-bottom: 200px;
}

.eAbajo100 {
    padding-bottom: 100px;
}

.eAbajoRS {
    min-height: 120px;
    max-height: 500px;
    padding-bottom: 26px;
}

.center {
    margin: auto;
    width: 50%;
}

.centerMenu {
    margin: auto;
    width: 35%;
}

.centrar {
    margin: auto;
    width: 40%;
}

.centerxy {
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

img {
    width: 100%;
    height: auto;
}

.right {
    float: right;
    width: 220px;
}

.left {
    float: left;
    width: 200px;
}

.alto30 {
    height: 30px;
    padding-bottom: 20px;
}

section {
    padding: 20px 0;
}


/*Colors*/

.bg-black {
    background-color: black;
}

.bg-blue {
    background-color: #032380;
}

html,
body {
    height: 100%;
    width: 100%;
}

body {
    font-family: Roboto, "Helvetica Neue", sans-serif;
}


/*Text Style*/

.custom-text {
    font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
}


/* Modals 

.modal-dialog {
    max-width: 865px;
}*/

/*Drag and drop*/
.uploadfilecontainer {
    background-image: url("assets/images/upload.gif");
    background-repeat: no-repeat;
    background-size: 100px;
    background-position: center;
    height: 200px;
    width: 80%;
    margin: 20px auto;
    border: 2px dashed #1C8ADB;
    border-radius: 10px;
}

.uploadfilecontainer:hover {
    cursor: pointer;
    background-color: #9ecbec !important;
    opacity: 0.8;
}

.files-list {
    display: flex;
    justify-content: space-between;
    width: 80%;
    margin: 10px auto;
    background: #ffffff;
    border: 1px dashed;
    border-radius: 12px;
    padding: 5px;
    color: #1c8adb;
}

.files-list .delete-file {
    background: transparent;
    border: none;
    cursor: pointer;
}

.files-list .delete-file img{
    width:30px;
}

